add Recaptcha control

--- a/ReCaptcha.Library/Web.config
+++ b/ReCaptcha.Library/Web.config
@@ -4,16 +4,6 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <configSections>
-    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="false" requirePermission="false" />
-  </configSections>
-  <configBuilders>
-    <builders>
-    <add name="Secrets" 
-         userSecretsId="4da60754-a4b8-425f-8e89-740acbc3f8aa" 
-         type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=1.0.0.0, Culture=neutral" />
-    </builders>
-  </configBuilders>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
@@ -23,14 +13,12 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-        <add tagPrefix="ReCaptchaLib" namespace="ReCaptcha.Library" assembly="ReCaptcha.Library" />
+        <add tagPrefix="ReCaptchaLib"
+            namespace="ReCaptcha.Library"
+            assembly="ReCaptcha.Library"/>
       </controls>
     </pages>
   </system.web>
-  <appSettings configBuilders="Secrets">
-    <add key="ReCaptchaLib.SiteKey" value=""/>
-    <add key="ReCaptchaLib.SecretKey" value=""/>
-  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
       <dependentAssembly>
